tests/neg-custom-args/deprecation/t3235-minimal.scala
object Test {
  def main(args: Array[String]): Unit = {
    assert(123456789.round == 123456789) // error
  }
}
